# hozk-demo

./: .gitignore  Cargo.toml  README.md
contracts/: remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: MerkleTree.sol  SP1Tornado.sol
contracts/test/: Tornado.s.sol
host/: Cargo.toml  build.rs
host/src/: deploy.rs  deposit.rs  lib.rs  withdraw.rs
merkle-lib/: Cargo.toml
merkle-lib/src/: lib.rs  proof.rs
program/: Cargo.toml
program/src/: main.rs
