[workspace.package]
name = "sp1-tc-demo"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "merkle-lib",
  "host"
]

# Exlcude the program such that its entire self contained from the host workspace.
exclude = [
  "program"
]

[workspace.dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
serde = { version = "1", features = ["derive"] }