[package]
name = "sp1-tc-demo-bin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "withdraw"
path = "src/withdraw.rs"

[[bin]]
name = "deposit"
path = "src/deposit.rs"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[dependencies]
alloy = "1.0.22"
anvil = "0.3.2"
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.2"
sp1-sdk = { version = "5.0.0", features = ["native-gnark"] }
tiny-keccak.workspace = true
tokio = { version = "1.46.1", features = ["full"] }
sp1-tc-demo-merkle-lib = { path = "../merkle-lib" }

[build-dependencies]
sp1-build = "5.0.0"
