[package]
name = "sp1-tc-demo-program"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-zkvm = "5.0.8"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
merkle-lib = { path = "../merkle-lib", package = "sp1-tc-demo-merkle-lib" }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }